# askanna-test

./: README.md  askanna.yml  main.py  pyproject.toml
.circleci/: config.yml
src/: main.py  run_job.py
tests/: test_hello.py
