
[tool.poetry]
name = "askanna-setup"
version = "0.1.0"
description = ""
authors = ["david-fortini <fortini.david@gmail.com>"]
packages = [
    { include = "src"}
]
[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
scikit-learn = "^0.23.0"
seaborn = "^0.10.1"
requests = "^2.23.0"
darksky = "^0.2"
darkskylib = "^0.3.91"
flake8 = "^3.8.2"
statsmodels = "^0.11.1"
shap = "^0.35.0"
xlrd = "^1.2.0"
boto3 = "^1.14.28"
askanna = "^0.5.1"
awscli = "^1.18.223"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
